--- a/Lesson005/Lesson005/Lesson005.csproj
+++ b/Lesson005/Lesson005/Lesson005.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdderTime.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WriteToFile.cs" />
