--- a/Lesson005/Lesson005/Lesson005.csproj
+++ b/Lesson005/Lesson005/Lesson005.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdderTime.cs" />
+    <Compile Include="Binares.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WriteToBinare.cs" />
     <Compile Include="WriteToFile.cs" />
   </ItemGroup>
   <ItemGroup>
